--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <html>
   <head>
-    <title>Home</title>
+    <title>BaseTwo - Digital Asset Fund</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="home description">
+    <meta name="description" content="Base Two Capital’s Digital Asset Fund provides investors with access to a professionally managed cryptocurrency and digital asset portfolio. ">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#ffffff">
+
     <link rel="stylesheet" href="/css/global.css">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,700" rel="stylesheet">
   </head>
   <body>
-
     <header id="header" class="">
       <div class="logo--header pl1 pt1">
         <img src="/images/logo-icon@2x.png" alt="">
@@ -16,7 +22,6 @@
         <li class="right"><a href="mailto:contact@basetwo.com?subject=BaseTwo - Contact - " class="btn btn--cta fs9">Email Us</a> </li>
       </ul>
     </header>
-
     <div id="content">
       
 
@@ -87,9 +92,6 @@
 
 
     </div>
-
-
-    <script src="/js/jquery.js"></script>
     <script src="/js/global.js"></script>
   </body>
 </html>
