--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="/images/logo-icon@2x.png" alt="">
       </div>
       <ul class="nav flex items-center pr1">
-        <li class="right"><a href="mailto:contact@basetwo.com?subject=BaseTwo - Contact - " class="btn btn--cta fs9">Email Us</a> </li>
+        <li class="right"><a href="mailto:Info@basetwo.com?subject=BaseTwo - Contact - " class="btn btn--cta fs9">Email Us</a> </li>
       </ul>
     </header>
     <div id="content">
